# mini_map_reduce

./: .gitignore  README.md  benchmark.py  data_generator.py  main.py  pyproject.toml  run_test_cases.py  spark_benchmark.py  tasks.py  test_cases_benchmark.py
mini_map_reduce/: __init__.py  engine.py  protocol.py  scheduler.py  worker.py
